fix: #1657 Fix preview  apps page container position on IE11

--- a/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
+++ b/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
@@ -42,11 +42,15 @@
     display: flex;
     flex-direction: column-reverse;
   }
+  @include for-ie-only {
+    width: 100%;
+  } 
 }
 
 .flexContainer {
   @include for-ie-only {
     align-self: center;
+    min-width: 1024px;
   }
 }
 
